# slash-diy

./: .gitignore  ARCHITECTURE.md  FLOW.md  ORCHESTRATION_FLOW.md  README.md  TODO.md  inner_ralph.py  inner_ralph_loop.md  program.md  pyproject.toml  run_tests.py
.claude-plugin/: marketplace.json  plugin.json
.cursor/hooks/state/: continual-learning.json
agents/: decomp-evaluator.md  decomp-implementer.md
commands/: decompose.md  diy-decomp.md  diy-loop.md  generate-ralph-prompt.md  run-ralph-loop.md  test-curate.md
docs/: STRUCTURE.md
docs/decomposition/: decomposition-evaluation-policy.md  decomposition-orchestrator.md  dependency-decomposition-workflow.md  library-decomposition-strategies.md
examples/: litellm-sample.md
hooks/: subagent-stop-hook.sh
plugins/slash-diy/skills/decompose/: SKILL.md
plugins/slash-diy/skills/decompose/scripts/: activate-inner-diy-loop.sh
plugins/slash-diy/skills/setup/scripts/: prepare.py
plugins/yoink/agents/: decomp-evaluator.md  decomp-implementer.md  test-discoverer.md  test-generator.md
plugins/yoink/hooks/: hooks.json
plugins/yoink/scripts/: run_tests.py
plugins/yoink/skills/curate-tests/: SKILL.md
plugins/yoink/skills/decompose/: SKILL.md
plugins/yoink/skills/setup/: SKILL.md
plugins/yoink/skills/test-curate/: SKILL.md
plugins/yoink/skills/yoink/: SKILL.md
scripts/: activate-inner-diy-loop.sh  analyze-docs.py  decomp.py  orchestration-linter.py  run_tests.py  setup-diy-loop.sh  visualize-flow.py
skills/decompose/: SKILL.md
skills/decompose/scripts/: inner_ralph.py
skills/setup/assets/: template-pyproject.toml
skills/test-curate/: SKILL.md
skills/test-curate/scripts/: rewrite_imports.py
(+2 files in other folders)
