[project]
name = "slash-diy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.src]
exclude = [".agents/"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",         #
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
