[project]
name = "yoink"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3", #
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.src]
exclude = [".agents/"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",         #
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ruff]
target-version = "py311"
exclude = [".agents/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (includes unused imports/variables F401, F841)
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "RET504", # unnecessary return
    "ANN401", # dynamically typed expressions (Any) - needed for **kwargs passthrough
]

[tool.ty.rules]
division-by-zero = "error"
deprecated = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"
